<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.esiag.mezzodijava</groupId>
	<artifactId>mezzo-it</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>mezzo-it</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>fr.esiag.mezzodijava</groupId>
			<artifactId>mezzo-libclient</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>fr.esiag.mezzodijava</groupId>
			<artifactId>mezzo-cosevent-server</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>fr.esiag.mezzodijava</groupId>
			<artifactId>mezzo-costime-server</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>fr.esiag.mezzodijava</groupId>
			<artifactId>mezzo-cosevent</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>fr.esiag.mezzodijava</groupId>
			<artifactId>mezzo-costime</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>fr.esiag.mezzodijava</groupId>
			<artifactId>nuclear-commons</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.7</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.8</version>
				<configuration>
					<argLine>-Djava.endorsed.dirs=${env.JACORB_HOME}/lib</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>shade</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-shade-plugin</artifactId>
						<version>1.4</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>shade</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
